--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
     "embla-carousel-react": "^8.3.0",
+    "express": "^5.1.0",
     "framer-motion": "^12.19.2",
     "http-proxy": "^1.18.1",
     "input-otp": "^1.2.4",
