--- a/env.example
+++ b/env.example
@@ -1,4 +1,11 @@
 # =================================
+# CONFIGURAÇÃO DO BANCO DE DADOS NEON
+# =================================
+
+# String de conexão do Neon PostgreSQL
+DATABASE_URL=postgresql://neondb_owner:npg_zgJibF05ZSqC@ep-solitary-mud-acn84ca4-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+
+# =================================
 # CLOUDINARY CONFIGURATION 
 # ⚠️ IMPORTANTE: Configure corretamente para evitar erro 401
 # =================================
