--- a/env.example
+++ b/env.example
@@ -6,6 +6,17 @@
 DATABASE_URL=postgresql://neondb_owner:npg_zgJibF05ZSqC@ep-solitary-mud-acn84ca4-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 # =================================
+# CONFIGURAÇÃO DO SUPABASE (EDGE FUNCTIONS)
+# =================================
+
+# URL do projeto Supabase (para Edge Functions)
+VITE_SUPABASE_URL=https://epqppxteicfuzdblbluq.supabase.co
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# Chaves do Supabase (obtenha no painel: Settings → API)
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+
+# =================================
 # CLOUDINARY CONFIGURATION 
 # ⚠️ IMPORTANTE: Configure corretamente para evitar erro 401
 # =================================
