--- a/env.example
+++ b/env.example
@@ -21,35 +21,48 @@ SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 # ⚠️ IMPORTANTE: Configure corretamente para evitar erro 401
 # =================================
 
-# Nome do seu cloud no Cloudinary (obrigatório)
+# Nome do seu cloud no Cloudinary (OBRIGATÓRIO)
+# Obtenha em: https://cloudinary.com/console
 VITE_CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
 
-# Upload preset PÚBLICO (obrigatório para currículos)
+# Upload preset PÚBLICO (OBRIGATÓRIO para uploads)
 # ⚠️ DEVE ser um preset "unsigned" e "public" criado no painel do Cloudinary
-VITE_CLOUDINARY_UPLOAD_PRESET=curriculos_public
+VITE_CLOUDINARY_UPLOAD_PRESET=cardapio_unsigned
 
-# Configurações opcionais (deixe vazio se não souber)
-VITE_CLOUDINARY_API_KEY=your_api_key
-VITE_CLOUDINARY_API_SECRET=your_api_secret
+# =================================
+# CONFIGURAÇÕES OPCIONAIS
+# =================================
+# 
+# ⚠️ IMPORTANTE: Estas chaves NÃO são necessárias para nossa implementação!
+# Elas são usadas apenas para uploads "signed" (autenticados) ou operações no backend.
+# 
+# Para uploads "unsigned" (nossa implementação atual), você pode deixar vazio:
+VITE_CLOUDINARY_API_KEY=
+VITE_CLOUDINARY_API_SECRET=
 
 # =================================
 # CONFIGURAR CLOUDINARY CORRETAMENTE
 # =================================
 # 
-# Para evitar erro 401 "Unauthorized" nos PDFs:
+# Para configurar o Cloudinary:
 #
 # 1. Acesse: https://cloudinary.com/console
 # 2. Vá em: Settings → Upload presets
 # 3. Clique em: "Add upload preset"
 # 4. Configure:
-#    - Name: curriculos_public
+#    - Name: cardapio_unsigned
 #    - Signing Mode: Unsigned
 #    - Access Mode: Public
 #    - Resource Type: Auto
-#    - Folder: curriculos
+#    - Folder: cardapio
 # 5. Clique em "Save"
 #
-# Documentação completa: INSTRUCOES_CLOUDINARY_CONFIGURACAO.md
+# Pastas organizadas:
+# - cardapio/produtos/     # Imagens de produtos
+# - cardapio/branding/     # Logo e banner da empresa
+# - cardapio/categorias/   # Imagens de categorias
+# - vagas/curriculos/      # Currículos (sistema antigo)
+# - test/                  # Testes
 #
 # =================================
 
