--- a/package.json
+++ b/package.json
@@ -72,11 +72,13 @@
     "drizzle-orm": "^0.44.5",
     "embla-carousel-react": "^8.3.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
     "framer-motion": "^12.19.2",
     "http-proxy": "^1.18.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "qz-tray": "^2.2.5",
     "react": "^18.3.1",
